updated responsive images

--- a/src/index.html
+++ b/src/index.html
@@ -415,14 +415,14 @@
         <div class="s-company-promo__images-block">
           <picture>
             <source media="(max-width: 688px)" srcset="./public/images/1-688w.png">
-            <img src="./public/images/1.png" srcset="./public/images/1.png 1x,
-                ./public/images/1@2x.png 2x" alt="Cтроящийся город, красивая иллюстрация."
+            <img src="./public/images/1.png" srcset="./public/images/1.png 1040w,
+                ./public/images/1@2x.png 2080w" sizes="(max-width: 900px) 880px,1026px" alt="Cтроящийся город, красивая иллюстрация."
               class="s-company-promo__image">
           </picture>
           <picture>
             <source media="(max-width:688px)" srcset="./public/images/2-688w.png">
-            <img src="./public/images/2.png" srcset="./public/images/2.png 1x,
-                ./public/images/2@2x.png 2x" alt="Cтроительная техника, иллюстрация."
+            <img src="./public/images/2.png" srcset="./public/images/2.png 806w,
+                ./public/images/2@2x.png 1612w" sizes="806px" alt="Cтроительная техника, иллюстрация."
               class="s-company-promo__image s-company-promo__image--2">
           </picture>
 
@@ -470,8 +470,8 @@
         </p>
         <picture>
           <source srcset="./public/images/3-688px.png" media="(max-width: 688px)">
-          <img src="./public/images/3.png" srcset="./public/images/3.png 1x,
-                ./public/images/3@2x.png 2x" alt="Беседа строителей на объекте, иллюстрация."
+          <img src="./public/images/3.png" srcset="./public/images/3.png 800w,
+                ./public/images/3@2x.png 1600w" sizes="800px" alt="Беседа строителей на объекте, иллюстрация."
             class="s-company-chaos__image">
         </picture>
       </div>
@@ -498,9 +498,9 @@
           </div>
           <div class="s-company-wecare__image-block">
             <picture class="s-company-wecare__image">
-              <source srcset="./public/images/4.webp 1x" type="image/webp">
-              <img src="./public/images/4.png" srcset="./public/images/4.png 1x,
-                    ./public/images/4@2x.png 2x" alt="Cтроители обсуждают идеи, иллюстрация.">
+              <source srcset="./public/images/4.webp" type="image/webp">
+              <img src="./public/images/4.png" srcset="./public/images/4.png 464w,
+                    ./public/images/4@2x.png 928w" sizes="464px" alt="Cтроители обсуждают идеи, иллюстрация.">
             </picture>
           </div>
         </div>
@@ -512,32 +512,32 @@
         <div class="s-company-partners__grid">
           <div class="s-company-partners__item">
             <img src="./public/images/company-1.png"
-              srcset="./public/images/company-1.png 1x, ./public/images/company-1@2x.png 2x" alt="Besix, логотип."
+              srcset="./public/images/company-1.png 180w, ./public/images/company-1@2x.png 360w" sizes="180px" alt="Besix, логотип партнёра."
               class="s-company-partners__image">
           </div>
           <div class="s-company-partners__item">
             <img src="./public/images/company-2.png"
-              srcset="./public/images/company-2.png 1x, ./public/images/company-2@2x.png 2x"
-              alt="six construct, логотип." class="s-company-partners__image">
+              srcset="./public/images/company-2.png 180w, ./public/images/company-2@2x.png 360w" sizes="180px"
+              alt="six construct, логотип партнёра." class="s-company-partners__image">
           </div>
           <div class="s-company-partners__item">
             <img src="./public/images/company-3.png"
-              srcset="./public/images/company-3.png 1x, ./public/images/company-3@2x.png 2x"
-              alt="echo investment, логотип." class="s-company-partners__image">
+              srcset="./public/images/company-3.png 180w, ./public/images/company-3@2x.png 360w" sizes="180px"
+              alt="echo investment, логотип партнёра." class="s-company-partners__image">
           </div>
           <div class="s-company-partners__item">
             <img src="./public/images/company-4.png"
-              srcset="./public/images/company-4.png 1x, ./public/images/company-4@2x.png 2x" alt="kajima, логотип."
+              srcset="./public/images/company-4.png 180w, ./public/images/company-4@2x.png 360w" sizes="180px" alt="kajima, логотип партнёра."
               class="s-company-partners__image">
           </div>
           <div class="s-company-partners__item">
             <img src="./public/images/company-5.png"
-              srcset="./public/images/company-5.png 1x, ./public/images/company-5@2x.png 2x" alt="lafarge, логотип."
+              srcset="./public/images/company-5.png 180w, ./public/images/company-5@2x.png 360w" sizes="180px" alt="lafarge, логотип партнёра."
               class="s-company-partners__image">
           </div>
           <div class="s-company-partners__item">
             <img src="./public/images/company-6.png"
-              srcset="./public/images/company-6.png 1x, ./public/images/company-6@2x.png 2x" alt="skanska, логотип."
+              srcset="./public/images/company-6.png 180w, ./public/images/company-6@2x.png 360w" sizes="180px" alt="skanska, логотип партнёра."
               class="s-company-partners__image">
           </div>
         </div>
@@ -560,7 +560,7 @@
                 на месте.</p>
             </div>
             <div class="s-company-description__image-block">
-              <img src="./public/images/5.png" srcset="./public/images/5.png 1x, ./public/images/5@2x.png 2x"
+              <img src="./public/images/5.png" srcset="./public/images/5.png 402w, ./public/images/5@2x.png 804w" sizes="402px"
                 alt="Строительная машина едет, иллюстрация." class="s-company-description__image">
             </div>
           </div>
@@ -573,7 +573,7 @@
                 промежутки времени в заранее назначенные отсеки, где разгрузочное оборудование готово и ждет их.</p>
             </div>
             <div class="s-company-description__image-block">
-              <img src="./public/images/6.png" srcset="./public/images/6.png 1x, ./public/images/6@2x.png 2x"
+              <img src="./public/images/6.png" srcset="./public/images/6.png 358w, ./public/images/6@2x.png 716w" sizes="358px"
                 alt="Строители обсуждают эффективность, иллюстрация." class="s-company-description__image">
             </div>
           </div>
@@ -588,7 +588,7 @@
                 каких-либо усилий.</p>
             </div>
             <div class="s-company-description__image-block">
-              <img src="./public/images/7.png" srcset="./public/images/7.png 1x, ./public/images/7@2x.png 2x"
+              <img src="./public/images/7.png" srcset="./public/images/7.png 416w, ./public/images/7@2x.png 832w" sizes="416px"
                 alt="Женщина изучает графики на компьютере, иллюстрация." class="s-company-description__image">
             </div>
           </div>
@@ -836,7 +836,7 @@
                 демо-версию.</p>
             </div>
             <div class="s-company-how__image-block">
-              <img src="./public/images/9.png" srcset="./public/images/9.png 1x, ./public/images/9@2x.png 2x"
+              <img src="./public/images/9.png" srcset="./public/images/9.png 336w, ./public/images/9@2x.png 672w" sizes="336px"
                 alt="Строитель задаётся вопросом, иллюстрация" class="s-company-how__image">
             </div>
           </div>
