added on-scrolling animation to forgotten card

--- a/src/index.html
+++ b/src/index.html
@@ -966,7 +966,7 @@
             </div>
             <figcaption class="s-company-awards__descr font--p3">50 лучших стартапов Global ConTech</figcaption>
           </figure>
-          <figure class="s-company-awards__item s-company-awards__item--center">
+          <figure class="s-company-awards__item s-company-awards__item--center" data-aos="fade-up">
             <div class="s-company-awards__image-block">
               <img src="./public/images/award4-original.png" alt="" class="s-company-awards__image">
             </div>
